--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .button
 {
-    width: 10%;
-    height: 5%;
+    min-width: 10%;
+    min-height: 5%;
     background-color: #4abe9d;
     text-align: center;
     padding: 1%;
@@ -15,8 +15,8 @@ a.noUnderLine:link
 }
 .buttonBleu
 {
-    width: 10%;
-    height: 5%;
+    min-width: 10%;
+    min-height: 5%;
     background-color: #4abe9d;
     text-align: center;
     padding: 1%;
@@ -26,8 +26,8 @@ a.noUnderLine:link
 }
 .buttonNoir
 {
-    width: 10%;
-    height: 5%;
+    min-width: 10%;
+    min-height: 5%;
     background-color: #343e47;
     text-align: center;
     padding: 1%;
@@ -37,8 +37,8 @@ a.noUnderLine:link
 }
 .buttonJaune
 {
-    width: 10%;
-    height: 5%;
+    min-width: 10%;
+    min-height: 5%;
     background-color: #ffed00;
     text-align: center;
     padding: 1%;
