Ajout d'une police "font-family: 'Lobster'"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster');
 .button
 {
     min-width: 10%;
@@ -49,4 +50,9 @@ a.noUnderLine:link
 a.noUnderLine:link
 {
     text-decoration:none;
+}
+
+.marginTopCinq
+{
+    margin-top: 5%;
 }
