--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster');
+.lobster
+{
+    font-family: 'Lobster', cursive;
+}
 .button
 {
     min-width: 10%;
