--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster');
-.profilContainer
+.menuProfile
+{
+    display: none;
+    transition: 5s;
+}
+.profileContainer
 {
     width: 33%;
     height: 100vh;
@@ -13,9 +18,9 @@
     flex-direction: column;
     color: white;
 }
-.profilPicture
+.profilePicture
 {
-    border-radius: 1000px;
+    border-radius: 50%;
     border: 5px double white;
     width: 50%;
     height: auto;
@@ -38,6 +43,7 @@
     right: 33%;
     top: 5%;
     text-align: center;
+    cursor: pointer;
 }
 .croix1
 {
@@ -64,4 +70,50 @@
     position: relative;
     top: 42%;
     left: 22%;
+}
+.hidden
+{
+    display: none;
+}
+.visible
+{
+    display: block;
+}
+.buttonMenuProfile
+{
+    height: 100px;
+    width: 100px;
+    content: "";
+    background: rgba(74, 190, 157, 0.5);
+    border-radius: 50%;
+    position: fixed;
+    right: 3%;
+    top: 5%;
+    cursor: pointer;
+    display: inline-block;
+
+}
+.change .bar{
+    transform: rotate(-45deg) ;
+}
+.change .bar{
+    opacity: 0;
+}
+.change .bar{
+    transform: rotate(45deg) ;
+}
+
+.bar1 , .bar2 , .bar3{
+    content:"";
+    background: white;
+    width: 25px;
+    height: 3px;
+    z-index: 3;
+    margin: 6px 0;
+    transition: .5s;
+    border-radius: 15px;
+    position: relative;
+    top: 37%;
+    left: 37%;
+
 }
