--- a/includes/support/support.css
+++ b/includes/support/support.css
@@ -108,7 +108,7 @@ label.error {
     input, textarea {
         width: 90%;
     }
-    button {
+    button, .button {
         width:90%;
     }
     body {
@@ -128,4 +128,25 @@ label.error {
     -webkit-border-radius:6px;
     -moz-border-radius:6px;
     border-radius:6px;
+}
+
+.button{
+    margin-top:15px;
+    margin-bottom:25px;
+    background-color:#2ABCA7;
+    padding: 12px 45px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px solid #2ABCA7;
+    -webkit-transition: .5s;
+    transition: .5s;
+    display: inline-block;
+    cursor: pointer;
+    width:30%;
+    color:#fff;
+    text-decoration: none;
+}
+.button:hover {
+    background:#19a08c;
 }
